# deepin-pdfium

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  deepin-pdfium.pc.in  target.cmake
.reuse/: dep5
debian/: changelog  control  control.1  libdeepin-pdfium-dev.install  libdeepin-pdfium.install  libdeepin-pdfium5-dev.install  libdeepin-pdfium5.install  rules
include/: dpdfdoc.h  dpdfglobal.h  dpdfpage.h
misc/: deepin-pdfiumConfig.cmake.in
src/: dpdfannot.cpp  dpdfdoc.cpp  dpdfglobal.cpp  dpdfpage.cpp  src.pro
